--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,17 +1,20 @@
 .menu {
   display: flex;
+  justify-content: space-between;
+
+  /* background-color: #125b50; */
+  color: white;
 
   /* justify-content: space-around; */
-}
-
-.menu-items,
-.free-trial-signin {
-  display: flex;
 }
 
 @media screen and (max-width: 768px) {
   .menu {
     display: block;
+
+    /* position: fixed;
+    bottom: 0;
+    width: 100%; */
   }
 
   .menu-items,
