Add the intro section.

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,24 +1,17 @@
 .menu {
   display: flex;
   justify-content: space-between;
-
-  /* background-color: #125b50; */
   color: white;
-
-  /* justify-content: space-around; */
 }
 
 @media screen and (max-width: 768px) {
   .menu {
     display: block;
-
-    /* position: fixed;
-    bottom: 0;
-    width: 100%; */
   }
 
   .menu-items,
   .free-trial-signin {
     display: block;
+    margin: 15px 0;
   }
 }
